--- a/s3_service/Cargo.toml
+++ b/s3_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cs490_final_project"
+name = "cs490_s3_service"
 version = "0.1.0"
 authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
 edition = "2018"
