--- a/file_service/Cargo.toml
+++ b/file_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cs490_file_service"
+name = "file_service"
 version = "0.1.0"
 authors = ["Nicholas Rose <nicholasgr44@gmail.com>"]
 edition = "2018"
