--- a/file_service/Cargo.toml
+++ b/file_service/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.7"
+rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
 regex = "1.4.6"
+anyhow = "1.0.40"
+[dependencies.reqwest]
+version = "0.11.3"
+features = ["stream"]
