--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
 		}
 	},
 	"spec": {
+		"hostNetwork": true,
 		"containers": [{
 				"name": "compression-service",
 				"image": "compression_service:latest",
