--- a/config.json
+++ b/config.json
@@ -8,14 +8,12 @@
 		}
 	},
 	"spec": {
-		"hostNetwork": true,
 		"containers": [{
 				"name": "compression-service",
 				"image": "compression_service:latest",
 				"imagePullPolicy": "IfNotPresent",
 				"ports": [{
-					"containerPort": 15707,
-					"hostPort": 15707
+					"containerPort": 15707
 				}],
 				"volumeMounts": [{
 					"name": "shared",
@@ -28,8 +26,7 @@
 				"image": "file_service:latest",
 				"imagePullPolicy": "IfNotPresent",
 				"ports": [{
-					"containerPort": 31415,
-					"hostPort": 31415
+					"containerPort": 31415
 				}],
 				"volumeMounts": [{
 					"name": "shared",
