--- a/file_service/Cargo.toml
+++ b/file_service/Cargo.toml
@@ -12,4 +12,4 @@ regex = "1.4.6"
 anyhow = "1.0.40"
 [dependencies.reqwest]
 version = "0.11.3"
-features = ["stream"]
+features = ["default-tls", "rustls", "rustls-native-certs", "rustls-tls", "native-tls", "hyper-tls"]
