--- a/s3_service/Cargo.toml
+++ b/s3_service/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# rust-s3 = { git = "https://github.com/durch/rust-s3", branch = "master" }
+rust-s3 = { git = "https://github.com/durch/rust-s3", branch = "master" }
+anyhow = "1.0.40"
 rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
-rust-s3 = "0.26.4"
+# async-std = "1.9.0"
